--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -11,6 +11,8 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@langchain/community": "^0.2.10",
+    "langchain": "^0.2.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
@@ -27,5 +29,8 @@
     "prettier-plugin-tailwindcss": "^0.6.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "@langchain/core": "^0.2"
   }
 }
