--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@langchain/community": "^0.2.10",
+    "@xenova/transformers": "^2.17.2",
     "chromadb": "^1.8.1",
     "chromadb-default-embed": "^2.13.2",
     "langchain": "^0.2.5",
@@ -27,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
+    "node-loader": "^2.0.0",
     "postcss": "^8",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.3",
