--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -18,6 +18,7 @@
     "langchain": "^0.2.5",
     "next": "14.2.3",
     "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.1.3",
     "react": "^18",
     "react-dom": "^18"
   },
