--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -20,7 +20,8 @@
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "unstructured-client": "^0.11.3"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
