--- a/nextjs-app/.env.sample
+++ b/nextjs-app/.env.sample
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=your_api_key
 UNSTRUCTURED_API_KEY=
 LLMWHISPERER_API_KEY=
+LLAMA_CLOUD_API_KEY=
 CHROMA_DB_HOST=http://localhost:8000
