--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -16,6 +16,7 @@
     "chromadb": "^1.8.1",
     "chromadb-default-embed": "^2.13.2",
     "langchain": "^0.2.5",
+    "llamaindex": "^0.5.0",
     "llmwhisperer-client": "^0.1.0",
     "next": "14.2.3",
     "pdf-parse": "^1.1.1",
