--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -23,7 +23,8 @@
     "pdf2json": "^3.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "unstructured-client": "^0.11.3"
+    "unstructured-client": "^0.11.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
