--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@langchain/community": "^0.2.10",
@@ -21,6 +22,7 @@
     "marked": "^13.0.2",
     "marked-plaintify": "^1.0.1",
     "next": "14.2.3",
+    "patch-package": "^8.0.0",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.3",
     "react": "^18",
