--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -23,6 +23,7 @@
     "marked": "^13.0.2",
     "marked-plaintify": "^1.1.0",
     "next": "14.2.3",
+    "node-persist": "^4.0.3",
     "patch-package": "^8.0.0",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.1.3",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
+    "@types/node-persist": "^3.1.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8",
