--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -17,7 +17,6 @@
     "@xenova/transformers": "^2.17.2",
     "chromadb": "^1.8.1",
     "chromadb-default-embed": "^2.13.2",
-    "dompurify": "^3.1.6",
     "entities": "^5.0.0",
     "gpt-tokenizer": "^2.2.1",
     "langchain": "^0.2.5",
@@ -34,6 +33,7 @@
     "pdf2json": "^3.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "sanitize-html": "^2.13.0",
     "unstructured-client": "^0.11.3",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
@@ -41,12 +41,12 @@
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
-    "@types/dompurify": "^3.0.5",
     "@types/markdownlint-rule-helpers": "^0.21.5",
     "@types/node": "^20.14.9",
     "@types/node-persist": "^3.1.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sanitize-html": "^2.11.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
