Added Azure Document Intelligence parser
Llamaparse does it better, although this one
doesn't hallucinates (apparently)

--- a/nextjs-app/.env.sample
+++ b/nextjs-app/.env.sample
@@ -2,4 +2,5 @@ OPENAI_API_KEY=your_api_key
 UNSTRUCTURED_API_KEY=
 LLMWHISPERER_API_KEY=
 LLAMA_CLOUD_API_KEY=
+AZURE_DOCUMENT_INTELLIGENCE_API_KEY=
 CHROMA_DB_HOST=http://localhost:8000
