--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -13,6 +13,8 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@azure-rest/ai-document-intelligence": "^1.0.0-beta.2",
+    "@azure/identity": "^4.4.1",
     "@langchain/community": "^0.2.27",
     "@xenova/transformers": "^2.17.2",
     "chromadb": "^1.8.1",
