--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -16,6 +16,7 @@
     "@azure-rest/ai-document-intelligence": "^1.0.0-beta.2",
     "@azure/identity": "^4.4.1",
     "@langchain/community": "^0.2.27",
+    "@opendocsg/pdf2md": "^0.1.31",
     "@xenova/transformers": "^2.17.2",
     "chromadb": "^1.8.1",
     "chromadb-default-embed": "^2.13.2",
