--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@azure-rest/ai-document-intelligence": "^1.0.0-beta.2",
     "@azure/identity": "^4.4.1",
+    "@langchain/cohere": "^0.3.0",
     "@langchain/community": "^0.2.27",
     "@opendocsg/pdf2md": "^0.1.31",
     "@xenova/transformers": "^2.17.2",
