--- a/nextjs-app/.env.sample
+++ b/nextjs-app/.env.sample
@@ -1,6 +1,7 @@
-OPENAI_API_KEY=your_api_key
-UNSTRUCTURED_API_KEY=
-LLMWHISPERER_API_KEY=
-LLAMA_CLOUD_API_KEY=
-AZURE_DOCUMENT_INTELLIGENCE_API_KEY=
+OPENAI_API_KEY=string
+COHERE_API_KEY=string
+UNSTRUCTURED_API_KEY=string
+LLMWHISPERER_API_KEY=string
+LLAMA_CLOUD_API_KEY=string
+AZURE_DOCUMENT_INTELLIGENCE_API_KEY=string
 CHROMA_DB_HOST=http://localhost:8000
