Parallelizing and adding timeout to Chromadb

--- a/nextjs-app/.env.sample
+++ b/nextjs-app/.env.sample
@@ -5,3 +5,9 @@ LLMWHISPERER_API_KEY=string
 LLAMA_CLOUD_API_KEY=string
 AZURE_DOCUMENT_INTELLIGENCE_API_KEY=string
 CHROMA_DB_HOST=http://localhost:8000
+# CHROMA_DB_TIMEOUT is an env variable because we need to adjust the
+# timeout depending on the machine. More powerful machines will run, on
+# average, faster and we can tighten the latency of Chroma. This is to
+# ensure we have good latency on the app and Chroma is not slowing us down.
+# We can test this enabling the 'console.time' around Chroma query methods.
+CHROMA_DB_TIMEOUT=number (millisecons from 100 to infinite, default is 2000ms)
