--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -22,12 +22,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.50.0",
-    "@trpc/client": "^11.0.0-rc.446",
-    "@trpc/next": "^11.0.0-rc.446",
-    "@trpc/react-query": "^11.0.0-rc.446",
-    "@trpc/server": "^11.0.0-rc.446",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.59.20",
+    "@trpc/client": "^11.0.0-rc.621",
+    "@trpc/next": "^11.0.0-rc.621",
+    "@trpc/react-query": "^11.0.0-rc.621",
+    "@trpc/server": "^11.0.0-rc.621",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
@@ -37,7 +38,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.10",
+    "@types/node": "^22.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
