--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -31,6 +31,7 @@
     "@trpc/react-query": "^11.0.0-rc.621",
     "@trpc/server": "^11.0.0-rc.621",
     "geist": "^1.3.0",
+    "lru-cache": "^11.0.2",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
