--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -18,7 +18,9 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "commitlint": "commitlint --edit",
+    "prepare": "cd .. && husky fullstack-app/.husky"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.3.0",
@@ -39,6 +41,8 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@types/eslint": "^8.56.10",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.3",
@@ -48,6 +52,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
+    "husky": "^9.1.6",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
