--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -21,7 +21,8 @@
     "typecheck": "tsc --noEmit",
     "commit": "cz",
     "commitlint": "commitlint --edit",
-    "prepare": "cd .. && husky fullstack-app/.husky"
+    "prepare": "cd .. && husky fullstack-app/.husky",
+    "release": "commit-and-tag-version"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.3.0",
@@ -50,6 +51,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "commit-and-tag-version": "^12.5.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
