--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -28,6 +28,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.3.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^5.59.20",
@@ -35,12 +39,17 @@
     "@trpc/next": "^11.0.0-rc.621",
     "@trpc/react-query": "^11.0.0-rc.621",
     "@trpc/server": "^11.0.0-rc.621",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "geist": "^1.3.0",
     "lru-cache": "^11.0.2",
+    "lucide-react": "^0.456.0",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -62,6 +71,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
+    "shadcn": "^2.1.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.5.3"
   },
