--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -45,6 +45,7 @@
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.456.0",
     "next": "^15.0.1",
+    "next-intl": "^3.25.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "superjson": "^2.2.1",
