--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -42,6 +42,7 @@
     "@trpc/server": "^11.0.0-rc.621",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "flag-icons": "^7.2.3",
     "geist": "^1.3.0",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.456.0",
