--- a/fullstack-app/components.json
+++ b/fullstack-app/components.json
@@ -14,7 +14,7 @@
     "components": "@/components",
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
-    "lib": "@/lib",
+    "lib": "@/lib/utils/ui",
     "hooks": "@/hooks"
   },
   "iconLibrary": "lucide"
