--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -29,6 +29,7 @@
     "@clerk/nextjs": "^6.3.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-separator": "^1.1.0",
