--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -27,10 +27,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.3.0",
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -45,16 +47,18 @@
     "clsx": "^2.1.1",
     "flag-icons": "^7.2.3",
     "geist": "^1.3.0",
+    "iso-639-1": "^3.1.3",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.456.0",
     "next": "^15.0.1",
     "next-intl": "^3.25.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
