--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -46,6 +46,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "flag-icons": "^7.2.3",
+    "formidable": "^3.5.2",
     "geist": "^1.3.0",
     "iso-639-1": "^3.1.3",
     "lru-cache": "^11.0.2",
@@ -64,6 +65,7 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@types/eslint": "^8.56.10",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
