--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.5",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=22.12.0"
+  },
   "scripts": {
     "build": "next build",
     "check": "next lint && tsc --noEmit",
