feat(db): added chroma db with langchain

--- a/fullstack-app/.env.example
+++ b/fullstack-app/.env.example
@@ -17,4 +17,12 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/chat-with-manuals"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=YOUR_PUBLISHABLE_KEY
 CLERK_SECRET_KEY=YOUR_SECRET_KEY
 LLAMA_CLOUD_API_KEY=YOUR_SECRET_KEY
+OPENAI_API_KEY=YOUR_SECRET_KEY
+CHROMA_DB_HOST=http://localhost:8000
+# CHROMA_DB_TIMEOUT is an env variable because we need to adjust the
+# timeout depending on the machine. More powerful machines will run, on
+# average, faster and we can tighten the latency of Chroma. This is to
+# ensure we have good latency on the app and Chroma is not slowing us down.
+# We can test this enabling the 'console.time' around Chroma query methods.
+CHROMA_DB_TIMEOUT=number (millisecons from 100 to infinite, default is 2000ms)
 
