--- a/fullstack-app/.env.example
+++ b/fullstack-app/.env.example
@@ -16,3 +16,5 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/chat-with-manuals"
 # Clerk Auth
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=YOUR_PUBLISHABLE_KEY
 CLERK_SECRET_KEY=YOUR_SECRET_KEY
+LLAMA_CLOUD_API_KEY=YOUR_SECRET_KEY
+
