--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -52,6 +52,7 @@
     "formidable": "^3.5.2",
     "geist": "^1.3.0",
     "iso-639-1": "^3.1.3",
+    "llamaindex": "^0.8.30",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.456.0",
     "next": "^15.0.1",
