--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -67,6 +67,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
