--- a/fullstack-app/.env.example
+++ b/fullstack-app/.env.example
@@ -25,4 +25,5 @@ CHROMA_DB_HOST=http://localhost:8000
 # ensure we have good latency on the app and Chroma is not slowing us down.
 # We can test this enabling the 'console.time' around Chroma query methods.
 CHROMA_DB_TIMEOUT=number (millisecons from 100 to infinite, default is 2000ms)
+API_REQUESTS_PER_MINUTE_PER_USER_RATE_LIMIT=number (default is 30*60)
 
