--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -51,6 +51,7 @@
     "chromadb-default-embed": "^2.13.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "entities": "^6.0.0",
     "flag-icons": "^7.2.3",
     "formidable": "^3.5.2",
     "geist": "^1.3.0",
@@ -59,6 +60,9 @@
     "llamaindex": "^0.8.30",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.456.0",
+    "markdownlint": "^0.37.3",
+    "marked": "^14.1.4",
+    "marked-plaintify": "^1.1.1",
     "next": "^15.0.1",
     "next-intl": "^3.25.1",
     "react": "^18.3.1",
