--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.3.0",
     "@hookform/resolvers": "^3.9.1",
-    "@langchain/community": "^0.2.27",
+    "@langchain/community": "^0.3.23",
+    "@langchain/core": "^0.3.27",
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -56,7 +57,7 @@
     "formidable": "^3.5.2",
     "geist": "^1.3.0",
     "iso-639-1": "^3.1.3",
-    "langchain": "^0.2.16",
+    "langchain": "^0.3.10",
     "llamaindex": "^0.8.30",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.456.0",
@@ -98,9 +99,6 @@
     "shadcn": "^2.1.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.5.3"
-  },
-  "resolutions": {
-    "@langchain/core": "0.2.27"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
