test(debug): mocking file parsing setting on an env variable

--- a/fullstack-app/.env.example
+++ b/fullstack-app/.env.example
@@ -27,3 +27,6 @@ CHROMA_DB_HOST=http://localhost:8000
 CHROMA_DB_TIMEOUT=number (millisecons from 100 to infinite, default is 2000ms)
 API_REQUESTS_PER_MINUTE_PER_USER_RATE_LIMIT=number (default is 30*60)
 
+# Enable mock file parsing in development mode
+MOCK_FILE_PARSING=boolean (true/false)
+
