--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -57,6 +57,7 @@
     "flag-icons": "^7.2.3",
     "formidable": "^3.5.2",
     "geist": "^1.3.0",
+    "gpt-tokenizer": "^2.8.1",
     "iso-639-1": "^3.1.3",
     "langchain": "^0.3.10",
     "llamaindex": "^0.8.30",
