--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -73,7 +73,6 @@
     "react-hook-form": "^7.53.2",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.3",
     "zod": "^3.23.8"
@@ -101,6 +100,7 @@
     "prisma": "^6.0.1",
     "shadcn": "^2.1.6",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-motion": "^1.0.1",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
