--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -66,6 +66,7 @@
     "markdownlint": "^0.37.3",
     "marked": "^14.1.4",
     "marked-plaintify": "^1.1.1",
+    "mime": "^4.0.6",
     "next": "^15.0.1",
     "next-intl": "^3.25.1",
     "react": "^18.3.1",
