feat(parsing): implemented document parsing using Trigger.dev

--- a/fullstack-app/.env.example
+++ b/fullstack-app/.env.example
@@ -27,6 +27,11 @@ CHROMA_DB_HOST=http://localhost:8000
 CHROMA_DB_TIMEOUT=number (millisecons from 100 to infinite, default is 2000ms)
 API_REQUESTS_PER_MINUTE_PER_USER_RATE_LIMIT=number (default is 30*60)
 
+# Trigger.dev (don't change the names since they are autopopulated on the CLI)
+TRIGGER_DEV_PROJECT_ID=YOUR_PROJECT_ID (obtained from Trigger.dev dashboard when you create a new project)
+TRIGGER_SECRET_KEY=YOUR_SECRET_API_KEY (obtained from Trigger.dev dashboard on an existing project)
+TRIGGER_API_URL=http://localhost:3040 (same URL as the Trigger.dev dashboard)
+
 # Enable mock file parsing in development mode
 MOCK_FILE_PARSING=boolean (true/false)
 
