--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -13,6 +13,7 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "trigger:dev": "npx trigger.dev@latest dev",
     "dev": "next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
@@ -44,6 +45,7 @@
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^5.59.20",
+    "@trigger.dev/sdk": "^3.3.12",
     "@trpc/client": "^11.0.0-rc.621",
     "@trpc/next": "^11.0.0-rc.621",
     "@trpc/react-query": "^11.0.0-rc.621",
@@ -69,6 +71,8 @@
     "mime": "^4.0.6",
     "next": "^15.0.1",
     "next-intl": "^3.25.1",
+    "pg": "^8.13.1",
+    "pgvector": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
@@ -81,6 +85,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
+    "@trigger.dev/build": "^3.3.12",
     "@types/clamscan": "^2.4.0",
     "@types/eslint": "^8.56.10",
     "@types/formidable": "^3.4.5",
@@ -91,6 +96,7 @@
     "@typescript-eslint/parser": "^8.1.0",
     "commit-and-tag-version": "^12.5.0",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^16.4.7",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.0.1",
     "husky": "^9.1.6",
