--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -45,7 +45,7 @@
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^5.59.20",
-    "@trigger.dev/sdk": "^3.3.12",
+    "@trigger.dev/sdk": "3.3.13",
     "@trpc/client": "^11.0.0-rc.621",
     "@trpc/next": "^11.0.0-rc.621",
     "@trpc/react-query": "^11.0.0-rc.621",
@@ -85,7 +85,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
-    "@trigger.dev/build": "^3.3.12",
+    "@trigger.dev/build": "3.3.13",
     "@types/clamscan": "^2.4.0",
     "@types/eslint": "^8.56.10",
     "@types/formidable": "^3.4.5",
