--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -14,7 +14,7 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "trigger:dev": "npx trigger.dev@latest dev",
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "postinstall": "prisma generate",
@@ -43,13 +43,13 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.59.20",
-    "@trigger.dev/sdk": "^3.3.12",
-    "@trpc/client": "^11.0.0-rc.621",
-    "@trpc/next": "^11.0.0-rc.621",
-    "@trpc/react-query": "^11.0.0-rc.621",
-    "@trpc/server": "^11.0.0-rc.621",
+    "@trigger.dev/sdk": "^3.3.13",
+    "@trpc/client": "^11.0.0-rc.741",
+    "@trpc/next": "^11.0.0-rc.741",
+    "@trpc/react-query": "^11.0.0-rc.741",
+    "@trpc/server": "^11.0.0-rc.741",
     "chromadb": "^1.9.1",
     "chromadb-default-embed": "^2.13.2",
     "clamscan": "^2.4.0",
@@ -69,7 +69,7 @@
     "marked": "^14.1.4",
     "marked-plaintify": "^1.1.1",
     "mime": "^4.0.6",
-    "next": "^15.0.1",
+    "next": "15.1.6",
     "next-intl": "^3.25.1",
     "pg": "^8.13.1",
     "pgvector": "^0.2.0",
@@ -80,7 +80,7 @@
     "tailwind-merge": "^2.5.4",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.3",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
@@ -89,16 +89,17 @@
     "@types/clamscan": "^2.4.0",
     "@types/eslint": "^8.56.10",
     "@types/formidable": "^3.4.5",
+    "@types/lint-staged": "~13.3.0",
     "@types/node": "^22.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "~18.3.18",
+    "@types/react-dom": "~18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "commit-and-tag-version": "^12.5.0",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.4.7",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.1",
+    "eslint-config-next": "15.1.6",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.39",
