--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -17,7 +17,7 @@
     "dev": "next dev --turbopack",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate; npx typesync",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint-staged": "lint-staged",
@@ -91,6 +91,7 @@
     "@types/formidable": "^3.4.5",
     "@types/lint-staged": "~13.3.0",
     "@types/node": "^22.9.0",
+    "@types/pg": "~8.11.11",
     "@types/react": "~18.3.18",
     "@types/react-dom": "~18.3.5",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
