--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -32,8 +32,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.11.1",
     "@hookform/resolvers": "^3.9.1",
-    "@langchain/community": "^0.3.23",
-    "@langchain/core": "^0.3.27",
+    "@langchain/community": "^0.3.29",
+    "@langchain/core": "^0.3.38",
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -61,7 +61,7 @@
     "geist": "^1.3.0",
     "gpt-tokenizer": "^2.8.1",
     "iso-639-1": "^3.1.3",
-    "langchain": "^0.3.10",
+    "langchain": "^0.3.15",
     "llamaindex": "^0.8.30",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.456.0",
@@ -85,7 +85,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
-    "@trigger.dev/build": "^3.3.12",
+    "@trigger.dev/build": "3.3.13",
     "@types/clamscan": "^2.4.0",
     "@types/eslint": "^8.56.10",
     "@types/formidable": "^3.4.5",
