--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -34,7 +34,8 @@
     "@hookform/resolvers": "^3.9.1",
     "@langchain/community": "^0.3.29",
     "@langchain/core": "^0.3.38",
-    "@prisma/client": "^6.0.1",
+    "@opentelemetry/api": "^1.9.0",
+    "@prisma/client": "^6.3.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -105,7 +106,7 @@
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^6.0.1",
+    "prisma": "^6.3.1",
     "shadcn": "^2.1.6",
     "tailwindcss": "^3.4.3",
     "tailwindcss-motion": "^1.0.1",
