--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -18,6 +18,7 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "postinstall": "prisma generate; npx typesync",
+    "pretty": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\" --cache",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint-staged": "lint-staged",
@@ -42,8 +43,9 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "1.2.0",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.11.1",
+    "@tailwindcss/postcss": "^4.0.4",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
     "@trigger.dev/sdk": "^3.3.13",
@@ -57,7 +59,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "entities": "^6.0.0",
-    "flag-icons": "^7.2.3",
+    "flag-icons": "^7.3.2",
     "formidable": "^3.5.2",
     "geist": "^1.3.0",
     "gpt-tokenizer": "^2.8.1",
@@ -65,7 +67,7 @@
     "langchain": "^0.3.15",
     "llamaindex": "^0.8.30",
     "lru-cache": "^11.0.2",
-    "lucide-react": "^0.456.0",
+    "lucide-react": "^0.474.0",
     "markdownlint": "^0.37.3",
     "marked": "^14.1.4",
     "marked-plaintify": "^1.1.1",
@@ -74,11 +76,16 @@
     "next-intl": "^3.25.1",
     "pg": "^8.13.1",
     "pgvector": "^0.2.0",
+    "postcss": "^8.5.1",
+    "prisma": "^6.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "shadcn": "^2.3.0",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.4",
+    "tailwindcss-motion": "^1.0.1",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.3",
     "zod": "^3.24.1"
@@ -103,13 +110,8 @@
     "eslint-config-next": "15.1.6",
     "husky": "^9.1.6",
     "lint-staged": "^15.4.3",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^6.3.1",
-    "shadcn": "^2.1.6",
-    "tailwindcss": "^3.4.3",
-    "tailwindcss-motion": "^1.0.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
