--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -53,8 +53,8 @@
     "@trpc/next": "^11.0.0-rc.741",
     "@trpc/react-query": "^11.0.0-rc.741",
     "@trpc/server": "^11.0.0-rc.741",
-    "chromadb": "^1.9.1",
-    "chromadb-default-embed": "^2.13.2",
+    "chromadb": "1.9.1",
+    "chromadb-default-embed": "2.13.2",
     "clamscan": "^2.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -69,7 +69,7 @@
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.474.0",
     "markdownlint": "^0.37.3",
-    "marked": "^14.1.4",
+    "marked": "^15.0.6",
     "marked-plaintify": "^1.1.1",
     "mime": "^4.0.6",
     "next": "15.1.6",
