--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -93,26 +93,29 @@
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
+    "@eslint/eslintrc": "^3",
     "@trigger.dev/build": "3.3.13",
     "@types/clamscan": "^2.4.0",
-    "@types/eslint": "^8.56.10",
+    "@types/eslint": "^9",
+    "@types/eslint-config-prettier": "~6.11.3",
+    "@types/eslint__eslintrc": "~2.1.2",
     "@types/formidable": "^3.4.5",
     "@types/node": "22.12.0",
     "@types/pg": "~8.11.11",
     "@types/react": "~18.3.18",
     "@types/react-dom": "~18.3.5",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
     "commit-and-tag-version": "^12.5.0",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.4.7",
-    "eslint": "^8.57.0",
+    "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "eslint-config-prettier": "^10.0.1",
     "husky": "^9.1.6",
     "lint-staged": "^15.4.3",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.23.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
