--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -14,10 +14,11 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "trigger:dev": "npx trigger.dev@latest dev",
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate; npx typesync",
+    "pretty": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\" --cache",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint-staged": "lint-staged",
@@ -30,90 +31,96 @@
     "release": "commit-and-tag-version"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.3.0",
-    "@hookform/resolvers": "^3.9.1",
-    "@langchain/community": "^0.3.23",
-    "@langchain/core": "^0.3.27",
-    "@prisma/client": "^6.0.1",
+    "@clerk/nextjs": "^6.11.1",
+    "@hookform/resolvers": "^3.10.0",
+    "@langchain/community": "^0.3.29",
+    "@langchain/core": "^0.3.38",
+    "@opentelemetry/api": "^1.9.0",
+    "@prisma/client": "^6.3.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "1.2.0",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.59.20",
-    "@tanstack/react-query-devtools": "^5.59.20",
-    "@trigger.dev/sdk": "3.3.13",
-    "@trpc/client": "^11.0.0-rc.621",
-    "@trpc/next": "^11.0.0-rc.621",
-    "@trpc/react-query": "^11.0.0-rc.621",
-    "@trpc/server": "^11.0.0-rc.621",
-    "chromadb": "^1.9.1",
-    "chromadb-default-embed": "^2.13.2",
+    "@tailwindcss/postcss": "^4.0.4",
+    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query-devtools": "^5.66.0",
+    "@trigger.dev/sdk": "^3.3.13",
+    "@trpc/client": "^11.0.0-rc.741",
+    "@trpc/next": "^11.0.0-rc.741",
+    "@trpc/react-query": "^11.0.0-rc.741",
+    "@trpc/server": "^11.0.0-rc.741",
+    "chromadb": "1.9.1",
+    "chromadb-default-embed": "2.13.2",
     "clamscan": "^2.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "entities": "^6.0.0",
-    "flag-icons": "^7.2.3",
+    "flag-icons": "^7.3.2",
     "formidable": "^3.5.2",
     "geist": "^1.3.0",
     "gpt-tokenizer": "^2.8.1",
     "iso-639-1": "^3.1.3",
-    "langchain": "^0.3.10",
+    "langchain": "^0.3.15",
     "llamaindex": "^0.8.30",
     "lru-cache": "^11.0.2",
-    "lucide-react": "^0.456.0",
+    "lucide-react": "^0.474.0",
     "markdownlint": "^0.37.3",
-    "marked": "^14.1.4",
+    "marked": "^15.0.6",
     "marked-plaintify": "^1.1.1",
     "mime": "^4.0.6",
-    "next": "^15.0.1",
+    "next": "15.1.6",
     "next-intl": "^3.25.1",
     "pg": "^8.13.1",
     "pgvector": "^0.2.0",
+    "postcss": "^8.5.1",
+    "prisma": "^6.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "^7.54.2",
+    "shadcn": "^2.3.0",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.4",
+    "tailwindcss-motion": "^1.0.1",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.3",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@eslint/eslintrc": "^3",
     "@trigger.dev/build": "3.3.13",
     "@types/clamscan": "^2.4.0",
-    "@types/eslint": "^8.56.10",
+    "@types/eslint": "^9",
+    "@types/eslint-config-prettier": "~6.11.3",
+    "@types/eslint__eslintrc": "~2.1.2",
     "@types/formidable": "^3.4.5",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
+    "@types/node": "22.12.0",
+    "@types/pg": "~8.11.11",
+    "@types/react": "~18.3.18",
+    "@types/react-dom": "~18.3.5",
     "commit-and-tag-version": "^12.5.0",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.4.7",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.1",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.6",
+    "eslint-config-prettier": "^10.0.1",
     "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^6.0.1",
-    "shadcn": "^2.1.6",
-    "tailwindcss": "^3.4.3",
-    "tailwindcss-motion": "^1.0.1",
-    "typescript": "^5.5.3"
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.23.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
   },
-  "packageManager": "npm@10.9.0",
+  "packageManager": "npm@11.1.0",
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
