--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -48,7 +48,7 @@
     "@tailwindcss/postcss": "^4.0.4",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
-    "@trigger.dev/sdk": "^3.3.13",
+    "@trigger.dev/sdk": "3.3.15",
     "@trpc/client": "^11.0.0-rc.741",
     "@trpc/next": "^11.0.0-rc.741",
     "@trpc/react-query": "^11.0.0-rc.741",
@@ -94,7 +94,7 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/eslintrc": "^3",
-    "@trigger.dev/build": "3.3.13",
+    "@trigger.dev/build": "3.3.15",
     "@types/clamscan": "^2.4.0",
     "@types/eslint": "^9",
     "@types/eslint-config-prettier": "~6.11.3",
