--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -81,6 +81,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.1",
     "shadcn": "^2.3.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.1",
@@ -97,8 +99,8 @@
     "@trigger.dev/build": "3.3.15",
     "@types/clamscan": "^2.4.0",
     "@types/eslint": "^9",
-    "@types/eslint-config-prettier": "~6.11.3",
     "@types/eslint__eslintrc": "~2.1.2",
+    "@types/eslint-config-prettier": "~6.11.3",
     "@types/formidable": "^3.4.5",
     "@types/node": "22.12.0",
     "@types/pg": "~8.11.11",
