--- a/fullstack-app/.env.example
+++ b/fullstack-app/.env.example
@@ -9,6 +9,9 @@
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
+# Node environment for client-side code using Next.js env variable expansion.
+NEXT_PUBLIC_CLIENT_ENV=$NODE_ENV
+
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/chat-with-manuals"
