--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-scroll-area": "1.2.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.5",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tailwindcss/postcss": "^4.0.4",
     "@tanstack/react-query": "^5.66.0",
