feat(errors): showing errors to the user in a localized Toast

--- a/fullstack-app/.env.example
+++ b/fullstack-app/.env.example
@@ -9,6 +9,12 @@
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
+# Node environment for client-side code, must match NODE_ENV or it will
+# throw an error. We cannot use Next.js env variable expansion ($NODE_ENV)
+# because the feature it is not available in in the Trigger.dev
+# environment.
+NEXT_PUBLIC_CLIENT_ENV=(development, test, production)
+
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/chat-with-manuals"
