--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -81,6 +81,7 @@
     "prisma": "^6.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
     "remark-gfm": "^4.0.1",
