chore(npm): aliased a duplicated script

--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -17,8 +17,8 @@
     "dev": "next dev --turbopack",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "pretty": "npm run format:write",
     "postinstall": "prisma generate; npx typesync",
-    "pretty": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json}\" --cache",
     "lint": "SKIP_ENV_VALIDATION=true next lint",
     "lint:fix": "SKIP_ENV_VALIDATION=true next lint --fix",
     "lint-staged": "SKIP_ENV_VALIDATION=true lint-staged",
