--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -73,8 +73,10 @@
     "marked": "^15.0.6",
     "marked-plaintify": "^1.1.1",
     "mime": "^4.0.6",
+    "natural": "^8.0.1",
     "next": "15.1.6",
     "next-intl": "^3.25.1",
+    "pdfreader": "^3.0.7",
     "pg": "^8.13.1",
     "pgvector": "^0.2.0",
     "postcss": "^8.5.1",
