--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -66,7 +66,7 @@
     "gpt-tokenizer": "^2.8.1",
     "iso-639-1": "^3.1.3",
     "langchain": "^0.3.15",
-    "llamaindex": "^0.8.30",
+    "llamaindex": "^0.9.1",
     "lru-cache": "^11.0.2",
     "lucide-react": "^0.474.0",
     "markdownlint": "^0.37.3",
@@ -84,7 +84,9 @@
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
+    "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "shadcn": "^2.3.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.1",
