--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -38,6 +38,7 @@
     "@opentelemetry/api": "^1.9.0",
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
