fix(images): new API Route to optimize images uploaded by users
Seems in production build Next.js cannot serve, even from /public folder, any image it has not been
there during compile time. So we had to develop a specific API Route to serve the optimized images
users upload. For compile time images we don't need to use a special loader.

--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -93,6 +93,7 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "shadcn": "^2.3.0",
+    "sharp": "^0.33.5",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.4",
