build(npm-scripts): building with concurrently
I have a long explanation for this change here:
https://www.linkedin.com/pulse/good-solution-run-two-terminals-one-irian-mont%C3%B3n-bh2re

--- a/fullstack-app/.env.example
+++ b/fullstack-app/.env.example
@@ -25,6 +25,7 @@ CLERK_SECRET_KEY=YOUR_SECRET_KEY
 LLAMA_CLOUD_API_KEY=YOUR_SECRET_KEY
 OPENAI_API_KEY=YOUR_SECRET_KEY
 CHROMA_DB_HOST=http://localhost:8000
+
 # CHROMA_DB_TIMEOUT is an env variable because we need to adjust the
 # timeout depending on the machine. More powerful machines will run, on
 # average, faster and we can tighten the latency of Chroma. This is to
@@ -38,6 +39,23 @@ TRIGGER_DEV_PROJECT_ID=YOUR_PROJECT_ID (obtained from Trigger.dev dashboard when
 TRIGGER_SECRET_KEY=YOUR_SECRET_API_KEY (obtained from Trigger.dev dashboard on an existing project)
 TRIGGER_API_URL=http://localhost:3040 (same URL as the Trigger.dev dashboard)
 
-# Enable mock file parsing in development mode
+# THIS IS NEEDED ONLY WHEN TESTING YOUR BUILD WITH `next start` COMMAND
+#
+# Since we enforce that NEXT_PUBLIC_CLIENT_ENV matches NODE_ENV, we need to
+# also set NODE_ENV to 'production' when testing your build with `next
+# start` command. Because the app also needs Trigger.dev running to work,
+# but on the production environment variables your Next.js build uses. The
+# problem is that Trigger.dev will always run the dev server in
+# 'development' mode, so we need to set NODE_ENV to 'production' to
+# override it when testing your build with `next start` command. Granted,
+# this is testing the main app build with a dev server, but it's not a bad
+# solution for quick tests.
+# 
+# However, I have to note that the best option is to run a real
+# Trigger.dev instance on their cloud, but then you'll have to pay the
+# costs of running it.
+NODE_ENV=(development, test, production)
+
+# Enable mock file parsing in development mode. No effect when NODE_ENV=production.
 MOCK_FILE_PARSING=boolean (true/false)
 
