--- a/fullstack-app/package.json
+++ b/fullstack-app/package.json
@@ -18,7 +18,7 @@
     "db:studio": "prisma studio",
     "db:seed": "prisma db seed",
     "trigger:dev": "npx trigger.dev@latest dev",
-    "dev": "next dev --turbopack",
+    "dev": "npx concurrently --kill-others --names \"next,trigger\" --prefix-colors \"yellow,blue\" \"next dev --turbopack\" \"npm run trigger:dev\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "pretty": "npm run format:write",
@@ -26,8 +26,8 @@
     "lint": "SKIP_ENV_VALIDATION=true next lint",
     "lint:fix": "SKIP_ENV_VALIDATION=true next lint --fix",
     "lint-staged": "SKIP_ENV_VALIDATION=true lint-staged",
-    "preview": "next build && next start",
-    "start": "next start",
+    "preview": "next build && npm run start",
+    "start": "npx concurrently --kill-others --names \"next,trigger\" --prefix-colors \"yellow,blue\" \"next start\" \"npm run trigger:dev -- --env-file .env.production\"",
     "typecheck": "tsc --noEmit",
     "commit": "git add . && cz",
     "commitlint": "commitlint --edit",
